Updates to downloads page banner animation --> converted to gsap timeline with span elements, update to features page banner animation using animate.css and fixed title/text spacing to 75%

--- a/css/main.css
+++ b/css/main.css
@@ -783,7 +783,7 @@ span.swiper-pagination-bullet {
       font-size: 21px;
     }
     .swiper-slide .text {
-        width: 50%;
+        width: 75%;
     }
       .bg-slide-1 {
           background: url(https://mir-s3-cdn-cf.behance.net/project_modules/disp/607de731234507.564a1d2420e5f.gif) center no-repeat;
